[package]
name = "async-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
parking_lot = "0.12.1"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
rand = "0.8.5"
